# Sales_forecasting

./: .gitignore  Machine_Learning_Delivery_Club.ipynb  README.md  pyproject.toml  sales_forecasting.ipynb  sales_forecasting_supplementary.ipynb
data/: test.csv
notebooks/: 1_data_transformation.ipynb  2_models.ipynb  3_clients.ipynb
